# Hyundai_NGV

./: README.md
SLAM/src/find_frontier/config/: costmap_common.yaml  costmap_global_static.yaml  costmap_local.yaml  planner.yaml  simple_maze.rviz
SLAM/src/find_frontier/launch/: hector_mapping.launch  nav_run.launch
SLAM/src/m_robot_ws/m_robot_description/urdf/: m_robot.gazebo  m_robot.xacro
SLAM/src/m_robot_ws/m_robot_gazebo/launch/: m_robot_world.launch
SLAM/src/m_robot_ws/m_robot_gazebo/worlds/: m_robot.world
catkin_ws/additional_code/: additional.xacro  code_order.txt  vehicle_addition.txt
catkin_ws/src/turtle_control/: CMakeLists.txt  package.xml
catkin_ws/src/turtle_control/include/kaist_usv_emul/: struct.h
catkin_ws/src/turtle_control/launch/: con_heron.launch  usv_udp_comm.launch
catkin_ws/src/turtle_control/scripts/: con_turtle.py
catkin_ws/src/turtle_control/scripts/UIData/: MORIN_GUI.ui  MORIN_GUI_REV.ui  MORIN_UAV_EMUL.ui  MORIN_USV_EMUL.ui
catkin_ws/src/turtlebot3_description/launch/: spawn_turtlebot3.launch
catkin_ws/src/tutorial/: CMakeLists.txt  model.xacro  package.xml
catkin_ws/src/tutorial/launch/: function.launch  param.yaml  spawn.launch
catkin_ws/src/udp_base/: CMakeLists.txt
catkin_ws/src/udp_base/src/: wpl_publisher_node.cpp
catkin_ws/src/udp_base/txtcontrol/: wplist.txt  wplist_og.txt
